@@ -1,0 +1,2 @@
+#define USE_FOR_STRCHRNUL 1
+#include "test-strchr.c"
